# soft-neck-control

./: .gitmodules  CMakeLists.txt  README.md
examples/: demo1.cpp  motor_test.cpp  p-loop-v.cpp  plot1.cpp  test_control.cpp  test_encoder.cpp  test_kinematic.cpp  test_position.cpp  test_position_m31.cpp  test_sensor.cpp  test_torque.cpp  v-loop-t.cpp
files/: phi.m_exp.csv
kinematics/: Kinematics.cpp  Kinematics.h
lib/: CMakeLists.txt
main/: paperidentification.cpp
